k8s/middleware/minio/operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-operator-console
  namespace: operators
  annotations:
    cert-manager.io/cluster-issuer: internal-ca
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # 同时支持 HTTP + HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minio-operator.czw-sre.internal
      secretName: minio-operator-console-tls
  rules:
    - host: minio-operator.czw-sre.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console  # Operator Console service（chart 自动创建）
                port:
                  number: 9090
